Fixed sizing of above-fold landing page on mobile devices in landscape

--- a/app/assets/stylesheets/users/landing_redesign.scss
+++ b/app/assets/stylesheets/users/landing_redesign.scss
@@ -20,7 +20,7 @@
   -ms-behavior: asset-url('ie8/backgroundsize.min.htc');
   background-color: rgb(15, 18, 27);
   position:relative;
-  height: 85vh;
+  min-height: 85vh;
   padding-bottom:100px;
   font-family: 'Dosis', sans-serif;
   padding-top: 50px;
@@ -238,8 +238,7 @@
   #slide1 {
     padding-top: 20px;
     #landing-video-play {
-      margin-top: 30px;
-      background-color:rgba(250,250,250,.43);
+      margin-top: 50px;
       padding:10px 30px;
       text-align:center;
       border:none;
@@ -256,8 +255,6 @@
         margin-top: 20px;
         margin-bottom: 0px;
         padding-bottom: 0px;
-        color: rgb(255,255,255);
-        color: rgba(255,255,255,.7);
         font-size: 20px;
         display:inline;
       }
